--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
   background-color: var(--cardBG);
   margin: 5rem auto;
   border-radius: 0.3rem;
-  max-width: 300px;
+  max-width: 18.75rem;
   text-align: center;
   overflow: hidden;
 }
@@ -33,12 +33,12 @@ body {
   aspect-ratio: 1.5/1;
   background-image: url("../images/image-header-mobile.jpg");
   background-size: 100% 100%;
-  background-color: hsl(277, 64%, 61%, 0.5);
+  background-color: hsl(277, 64%, 61%, 1);
   background-blend-mode: multiply;
 }
 
 .content-container {
-  padding: 22px 11px;
+  padding: 1.375rem 0.6875rem;
 }
 .content-container h1 {
   color: var(--headingStats);
@@ -48,10 +48,10 @@ body {
   color: var(--accent);
 }
 .content-container p {
-  padding: 15px 11px;
+  padding: 0.9375rem 0.6875rem;
   color: var(--mainParagragh);
-  line-height: 23px;
-  font-weight: 400px;
+  line-height: 1.4375rem;
+  font-weight: 25rem;
 }
 .stats-container ul li {
   list-style-type: none;
@@ -70,21 +70,20 @@ body {
 
 .attribution {
   text-align: center;
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: white;
-  padding-top: 20px;
+  padding-top: 0.625rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
   text-decoration: none;
 }
-@media (min-width: 700px) {
+@media (min-width: 43.75rem) {
   .main-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    max-width: 1000px;
+    max-width: 62.5rem;
     text-align: start;
-    margin-bottom: 50px;
   }
   .mobile-picture-container {
     display: none;
@@ -94,27 +93,27 @@ body {
     aspect-ratio: 1.2/1;
     background-image: url("../images/image-header-desktop.jpg");
     background-size: 100% 100%;
-    background-color: hsl(277, 64%, 61%, 0.5);
+    background-color: hsl(277, 64%, 61%, 1);
     background-blend-mode: multiply;
   }
   .content-container {
-    padding: 55px 60px;
+    padding: 3.4375rem 3.75rem;
   }
   .content-container #description {
     padding: 0;
     position: relative;
-    top: 20px;
+    top: 1.25rem;
   }
   .stats-container ul li {
     display: inline-block;
     position: relative;
-    top: 80px;
+    top: 5rem;
   }
   .stats-container p {
-    padding: 15px 0;
+    padding: 0.9375rem 0;
   }
   .list-2 {
-    margin-right: 25px;
-    margin-left: 25px;
+    margin-right: 1.5625rem;
+    margin-left: 1.5625rem;
   }
 } ;
